# nyc-rent-prices

./: .gitignore  README.md  package.json  vercel.json
api/: rent-series.ts  rent.ts
api/lib/: neon.ts  rentSeriesServer.ts
app/: build.ts  bun-env.d.ts  package.json  tsconfig.json
app/api/: rent-series.ts  rent.ts
app/hooks/: useNeighborhoodRent.ts
app/scripts/: build-nta-canonical-map.py
app/src/: App.tsx  index.css  index.html  (+2 more)
model/: .gitignore  pyproject.toml
model/data/: medianAskingRent_All.csv  neighborhood_medians.csv  nyc_medians.csv  rent_prices_long.csv  rent_prices_long_imputed.csv
model/data/not_using/: rentalIndex_All.csv  rentalInventory_All.csv
model/notebooks/: data_analysis.ipynb  data_exploration.ipynb  process_data.ipynb  train_model copy.ipynb  train_model.ipynb
model/output/: All_Downtown.csv  All_Midtown.csv  All_Upper_Manhattan.csv  Astoria.csv  Battery_Park_City.csv  Bay_Ridge.csv  Bayside.csv  Bedford-Stuyvesant.csv  Bensonhurst.csv  Boerum_Hill.csv  Borough_Park.csv  Briarwood.csv  Brighton_Beach.csv  Bronx.csv  Brooklyn.csv  Brooklyn_Heights.csv  Brownsville.csv  Bushwick.csv  Carroll_Gardens.csv  Central_Harlem.csv  Central_Park_South.csv  Central_Queens.csv  Chelsea.csv  Chinatown.csv  Clinton_Hill.csv  Cobble_Hill.csv  Columbia_St_Waterfront_District.csv  Concourse.csv  Coney_Island.csv  Corona.csv  Crown_Heights.csv  DUMBO.csv  Ditmas_Park.csv  Downtown_Brooklyn.csv  Dyker_Heights.csv  East_Brooklyn.csv  East_Flatbush.csv  East_Harlem.csv  East_New_York.csv  East_Village.csv  (+69 more)
notebooks/: data_exploration.ipynb
(+10 files in other folders)
