[project]
name = "nyc-rent-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hierarchicalforecast>=1.3.1",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pmdarima>=2.1.1",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
